# ICSD_Data_Fetcher

./: .gitignore  README.md  fetch_data_modify.py  pyproject.toml
