[project]
name = "icsd-get-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NabeRoute", email = "kouya1278@gmail.com" }
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "ipywidgets==7.6.3",
    "numpy==2.1.1",
    "pandas==2.2.2",
    "py3dmol==2.4.0",
    "pymatgen==2024.10.22",
    "requests==2.32.3",
    "streamlit>=1.39.0",
    "stmol==0.0.8",
    "aiohttp>=3.10.10",
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "streamlit-extras>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/icsd_get_data"]
